# local-recognizer

./: .gitignore  Makefile  README.md  combined.rar  pyproject.toml
tester/: __main__.py  app.py  config.py  make_csv.py  watcher.py
tester/box_combination/: combi_to_csv.py  combination.py
tester/box_combination/labels/: 11_0_2.txt  11_0_3.txt  11_1_1.txt  11_1_2.txt  11_1_3.txt  11_1_4.txt  11_2_1.txt
tester/box_combination/labels/combined/: 11.csv  11.txt
tester/image_prep/: crop.py
